Implement KlangCompiler CLI using (slightly refined) CommandLineParser